# wattpad_to_epub

./: .gitignore  README.md  README.rmd  pyproject.toml
.github/workflows/: ci.yml
tests/: test_wattpad_to_epub.py
wattpad_to_epub/: main.py  style.css
wattpad_to_epub/scrappers/: __init__.py  base.py  chrysentemum_garden.py  foxaholic.py  wattpad.py
