[tool.poetry]
name = "wattpad_to_epub"
version = "0.1.0"
description = ""
authors = ["Marie <schindler.marie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pydantic = "^1.8.2"
httpx = "^0.20.0"
beautifulsoup4 = "^4.10.0"
EbookLib = "^0.17.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "isort"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wte = "wattpad_to_epub.main:main"