[tool.poetry]
name = "wattpad_to_epub"
version = "0.1.0"
description = "CLI that converts wattpad stories to epub files"
authors = ["Marie <schindler.marie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pydantic = "^1.8.2"
httpx = "^0.20.0"
beautifulsoup4 = "^4.10.0"
EbookLib = "^0.17.1"
loguru = "^0.5.3"
undetected-chromedriver = "^3.5.0"
selenium = "^4.10.0"
aiodecorators = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wte = "wattpad_to_epub.main:main"

[tool.isort]
profile = 'black'
line_length = 120